Setup all subpages with navigation bar
I created a navigation bar for all subpages. #48
The navigation bar includes our logo, a search bar, and a hamburger menu to other subpages.
The main pages are linked to one other.
I also setup a professor profile template with the navigation bar.

Homepage is updated with links to other subpages and logo on the navigation bar is updated.

More to implement:
Search bar should link to professor database and generate a webpage using the professor profile template
Main sections for ScheduleMatching, OfficeNavigation, and ProfessorProfile are not yet implemented for both front-end and back-end

--- a/homepage.html
+++ b/homepage.html
@@ -5,7 +5,7 @@
     <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah|Laila" rel="stylesheet">
     <link rel="stylesheet" href="homepage.css">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-    <title> UBStalking </title>
+    <title> UBStalking'-' </title>
     <h1>UBStalking'-'</h1>
 </head>
 <body>
@@ -35,12 +35,12 @@
 -->
   <nav>
     <div class = "logo" href="homepage.html">
-      <h3> UBStalking </h3>
+      <h3> UBStalking'-' </h3>
     </div>
     <ul class = "nav-sub">
-      <li><a href="#">Schedule Matching</a>
+      <li><a href="ScheduleMatching.html">Schedule Matching</a>
       </li>
-      <li><a href="#">Office Navagation</a>
+      <li><a href="OfficeNavigation.html">Office Navigation</a>
       </li>
       <li><a href="#">Report Bugs</a>
       </li>
