--- a/OfficeNavigation.html
+++ b/OfficeNavigation.html
@@ -34,7 +34,22 @@
 
       <label for="nav-toggle" class="burger"><span></span></label>
     </nav>
+  
 
+  <div id="googleMap" style="width:100%;height:400px;"></div>
+
+<script>
+function myMap() {
+var mapProp= {
+  center:new google.maps.LatLng(51.508742,-0.120850),
+  zoom:5,
+};
+var map = new google.maps.Map(document.getElementById("googleMap"),mapProp);
+}
+</script>
+
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDix9MoQ9rSna9mc6GCPYLt6xqDHZxC0TA&callback=myMap"></script>
 
     </body>
 </html>
+
