--- a/ProfessorProfileTemplate.html
+++ b/ProfessorProfileTemplate.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="ProfessorProfileTemplate.css">
     <meta charset = "utf-8">
     <meta name ="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://cdn.firebase.com/js/client/2.4.2/firebase.js"></script>
   </head>
   <body>
     <nav>
@@ -48,23 +49,48 @@
       </ul>
     </h2>
 
-    <!-- here is the map, schedule matching, and professor rating -->
-    <table class="profile-table">
-      <tr>
-        <td class="sub-table"><a href="#">Map</a></td>
-        <td class="sub-table"><a href="#">Schedule Matching</a></td>
-        <td class="sub-table"><a href="#">Comment</a></td>
-      </tr>
-    </table>
+    <!-- here is the map navigation -->
+    <h5>
+      <ul class="none">
+        <li><a href="#">Map</a></li>
+      </ul>
+    </h5>
+    <!-- here is the schedule navigation -->
+    <h6>
+      <ul class="none">
+        <li><a href="#">Schedule</a></li>
+      </ul>
+    </h6>
+
+    <!-- here is the comment box -->
+    <input type='text' id='messageInput'  placeholder='Enter comments here...'>
+    <button type="button" id='messageButton' onclick="savedata()">Post</button>
 
     <!-- here is the comment area -->
-    <h3>Students' comments</h3>
-    <h4>
-      <ul class="none">
-        <li>Something...</li>
-        <li>Another something...</li>
-        <li>Nice prof great lec!</li>
-      </ul>
-    </h4>
+    <h1>Students' comments</h1>
+    <textarea id="results" readonly></textarea>
+    <script>
+
+    var messagesRef = new Firebase('https://ubstalking-19cf2.firebaseio.com/');
+    var messageField = document.getElementById('messageInput');
+    var messageResults = document.getElementById('results');
+    // Save data to firebase
+    function savedata(){
+      var message = messageField.value;
+      messagesRef.push({fieldName:'messageField', text:message});
+      messageField.value = '';
+    }
+    // Update results when data is added
+    messagesRef.limitToLast(10).on('child_added', function (snapshot) {
+        var data = snapshot.val();
+        console.log(snapshot.val());
+        var message = data.text;
+        if (message != undefined)
+        {
+          messageResults.value += '\n' + message;
+        }
+    });
+
+    </script>
   </body>
 </html>
